# sandbox

./: .codespellignore  .gitignore  Dockerfile  README.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: age.yml  ansible.yml  awscli.yml  ccache.yml  checkov.yml  codespell.yml  cryptolyzer.yml  dependency-review.yml  diagram.yml  dive.yml  docker-3.0.yml  docker-3.1dev.yml  docker.yml  dump-context.yml  gitlabsync.yml  homefront.yml  jless.yml  linter.yml  nginx-distroless.yml  nginx.yml  open-interpreter.yml  pingcastle.yml  ruff.yml  scan-win.yml  scan-win2.yml  scan.yml  scorecard.yml  semgrep.yml  sslyze.yml  test.yml  update-arm.yml  update-macos.yml  update.yml  visidata.yml
age/: Dockerfile
ai-hedge-fund/: Pipfile  pyproject.toml  requirements.txt
aider/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
ansible/: Dockerfile  Dockerfile.ubuntu  requirements.txt
aranet4/: Pipfile  pyproject.toml  requirements.txt
autoflake/: Dockerfile  Dockerfile.ubuntu  Pipfile  pyproject.toml  requirements.txt
awscli/: Dockerfile  Dockerfile.1.16.14  Dockerfile.1.29.49  Dockerfile.1.29.59  Pipfile  pyproject.toml  requirements.1.16.14.txt  requirements.1.29.50.txt  requirements.1.29.51.txt  requirements.1.29.52.txt  requirements.1.29.53.txt  requirements.1.29.54.txt  requirements.1.29.59.txt  requirements.txt
badkeys/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
bgperf2/: Pipfile  Pipfile.broken  pyproject.toml  requirements.txt
caddy-docker-proxy/: Dockerfile
cantools/: Pipfile  pyproject.toml  requirements.txt
chatgpt-linux-assistant/: Pipfile  requirements.txt
claude-engineer/: Pipfile  pyproject.toml  requirements.txt
codespell/: Pipfile  pyproject.toml  requirements.txt
cryptolyzer/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
datasette/: Pipfile  pyproject.toml  requirements.txt
deepdiff/: Pipfile  pyproject.toml  requirements.txt
diagrams/: Pipfile  pyproject.toml  requirements.txt
dive/: Dockerfile
dkimpy/: Dockerfile  Dockerfile.ubuntu  Pipfile  requirements.txt
dnsdiag/: Pipfile  pyproject.toml  requirements.txt
dnsrecon/: Pipfile  pyproject.toml  requirements.txt
dnstwist/: Pipfile  pyproject.toml  requirements.txt
dnsvalidator/: Pipfile  pyproject.toml  requirements.txt
docker/: Dockerfile
done/age/: Dockerfile
done/ansible/: Dockerfile  Dockerfile.ubuntu  Pipfile  pyproject.toml  requirements.txt
done/dive/: Dockerfile
done/dkimpy/: Dockerfile  Dockerfile.ubuntu  pyproject.toml  requirements.txt
done/imapsync/: Dockerfile  Dockerfile.test
done/nginx/: Dockerfile  Dockerfile.alpine  Dockerfile.works
done/nginx-distroless/: Dockerfile  Dockerfile.stable
done/prodfiler/: compose.yml
done/ruff/: Dockerfile  requirements.txt
finanace_dl/: Pipfile  pyproject.toml  requirements.txt
gallery-dl/: Pipfile  pyproject.toml  requirements.txt
greynoise/: Dockerfile  Dockerfile.alpine  Pipfile  pyproject.toml  requirements.txt
hashquery/: Pipfile  requirements.txt
hdbcli/: Pipfile  pyproject.toml  requirements.txt
hollywood/: Dockerfile
huggingface-cli/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
ilab/: Pipfile  pyproject.toml  requirements.txt
imapsync/: Dockerfile  Dockerfile.test
internetarchive/: Pipfile  pyproject.toml  requirements.txt
jc/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  Pipfile  pyproject.toml  requirements.txt
jless/: Dockerfile  Dockerfile.curl
llama-cpp-agent/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
llama-fs/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
llm/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
memray/: Dockerfile  Dockerfile.ubuntu  Pipfile  pyproject.toml  requirements.txt
mermaid/: LB.md  SAP.md  Storage.md
mlx/: Pipfile  pyproject.toml  requirements.txt
mlx-hub/: pyproject.toml  requirements.txt
mold/: Dockerfile
nginx/: Dockerfile  Dockerfile.alpine  Dockerfile.works
nginx-distroless/: Dockerfile  Dockerfile.stable
notdiamond/: Pipfile  pyproject.toml  requirements.txt
open-interpreter/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
openbbterminal/: Dockerfile  Dockerfile.alpine  Pipfile  pyproject.toml  requirements.txt
paperless-ngx/: Pipfile  pyproject.toml  requirements.txt
pingcastle/: Dockerfile  Dockerfile.test
pip-audit/: Pipfile  pyproject.toml  requirements.txt
pipenv-poetry-migrate/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
posting/: Pipfile  pyproject.toml  requirements.txt
prowler/: Pipfile  pyproject.toml  requirements.txt
pshtt/: Pipfile  pyproject.toml  requirements.txt
pstcli/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu
puncia/: Pipfile  pyproject.toml  requirements.txt
punica/: Pipfile  requirements.txt
pwnagotchi/: Pipfile  pyproject.toml  requirements.txt
pyaranet4/: Pipfile  pyproject.toml  requirements.txt
pyinfra/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
python-matter-server/: Pipfile  pyproject.toml  requirements.txt
pyupgrade/: Pipfile  pyproject.toml  requirements.txt
revchatgpt/: pyproject.toml  requirements.txt
rhel/: Dockerfile
routellm/: Pipfile  pyproject.toml  requirements.txt
ruff/: Dockerfile  Dockerfile.ubuntu  requirements.txt
sap/: sap-perms-and-owners.py
scrapeghost/: Pipfile  pyproject.toml  requirements.txt
scripts/: test.sh  updateDockerDeps.sh  updatePythonDeps.sh  updatePythonDepsArm.sh  updatePythonDepsUV.sh
seaborn/: Pipfile  requirements.txt
sgpt/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
shodan/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
sles/: Dockerfile
snowball/: Dockerfile
ssh-mitm/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
sslyze/: Dockerfile  Pipfile  requirements.txt
steamcmd/: Dockerfile  README.md
testssl.sh/: Dockerfile  Dockerfile.test1
uv/: Dockerfile  Pipfile  requirements.txt
visidata/: .visidatarc  Dockerfile  Pipfile  requirements.txt
wolverine/: Pipfile  pyproject.toml  requirements.txt
wtfis/: pyproject.toml  requirements.txt
(+8 files in other folders)
