[project]
name = "aider-chat-project"
version = "0.82.2"
description = "Aider project migrated from Pipenv to uv"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "aider-chat",
  "aiohappyeyeballs",
  "litellm",
  "openai"
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }
pytorch = { url = "https://download.pytorch.org/whl/cpu" }

[dependency-groups]
dev = [
  # Uncomment the following lines to include these packages as development dependencies
  # "pytest-playwright",
  # "playwright"
]
