[project]
name = "aider-chat-project"
dynamic = ["version"]
description = "AI Pair Programming in Your Terminal"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Paul Gauthier", email = "paul@gauthier.org" }
]
maintainers = [
  { name = "Paul Gauthier", email = "paul@gauthier.org" }
]

dependencies = [
  "aider-chat",
  "aiohappyeyeballs",
  "litellm",
  "openai"
]

keywords = ["ai", "chatgpt", "aider", "code-assistant"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/paulg/aider"
Repository = "https://github.com/paulg/aider"
Issues = "https://github.com/paulg/aider/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }
pytorch = { url = "https://download.pytorch.org/whl/cpu" }

[dependency-groups]
dev = [
  # "pytest-playwright",
  # "playwright"
]
