[project]
name = "aranet4-project"
version = "2.5.1"
description = "Python client for Aranet4 CO₂ sensors"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "aranet4"
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
