[project]
name = "aranet4-project"
dynamic = ["version"]
description = "Python client for Aranet4 CO₂ sensors"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
  { name = "Anrijs", email = "anrijs@example.com" }
]
maintainers = [
  { name = "Anrijs", email = "anrijs@example.com" }
]

dependencies = [
  "aranet4"
]

keywords = ["aranet4", "co2", "sensor", "bluetooth", "iot"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/Anrijs/Aranet4-Python"
Repository = "https://github.com/Anrijs/Aranet4-Python"
Issues = "https://github.com/Anrijs/Aranet4-Python/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
