[project]
name = "autoflake-project"
version = "0.1.0"
description = "Project utilizing autoflake for code cleanup"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "autoflake"
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
