[project]
name = "autoflake-project"
dynamic = ["version"]
description = "Removes unused imports and unused variables as reported by pyflakes"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Brad Solomon", email = "brad.solomon@example.com" }
]

dependencies = [
  "autoflake"
]

keywords = ["autoflake", "pyflakes", "lint", "code-cleanup", "formatter"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Homepage = "https://github.com/PyCQA/autoflake"
Repository = "https://github.com/PyCQA/autoflake"
Issues = "https://github.com/PyCQA/autoflake/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
