[project]
name = "awscli-project"
version = "1.40.6"
description = "Universal Command Line Environment for AWS"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "awscli",
  #"awscli==1.16.14",
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
