[project]
name = "awscli-project"
dynamic = ["version"]
description = "Universal Command Line Environment for AWS"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache 2.0" }

authors = [
  { name = "Amazon Web Services", email = "awscli-feedback@amazon.com" }
]
maintainers = [
  { name = "Amazon Web Services", email = "awscli-feedback@amazon.com" }
]

dependencies = [
  "awscli",
  #"awscli==1.16.14",
]

keywords = ["aws", "cli", "cloud", "amazon"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: System :: Shells"
]

[project.urls]
Homepage = "https://github.com/aws/aws-cli"
Repository = "https://github.com/aws/aws-cli"
Documentation = "https://docs.aws.amazon.com/cli/latest/userguide/"
Issues = "https://github.com/aws/aws-cli/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
