[project]
name = "badkeys-project"
version = "0.1.0"
description = "Check cryptographic keys for known weaknesses"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "badkeys",
  "dnspython",
  "paramiko"
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
