[project]
name = "badkeys-project"
dynamic = ["version"]
description = "Check cryptographic keys for known weaknesses"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Scott Alexander Mehl", email = "scott@mehl.mx" }
]
maintainers = [
  { name = "Scott Alexander Mehl", email = "scott@mehl.mx" }
]

dependencies = [
  "badkeys",
  "dnspython",
  "paramiko"
]

keywords = ["security", "crypto", "keys", "weakness", "ssh", "dns"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/mehlmx/badkeys"
Repository = "https://github.com/mehlmx/badkeys"
Issues = "https://github.com/mehlmx/badkeys/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
piwheels = { url = "https://www.piwheels.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
