[project]
name = "bgperf2-project"
description = "Performance measurement tool for BGP implementations"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
authors = [
  { name = "NetEngLabs" }
]
license = "Apache-2.0"
keywords = ["bgp", "performance", "networking"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking"
]
dependencies = [
  #"bgperf2 @ git+https://github.com/jauderho/bgperf2.git",
  "docker",
  "jinja2",
  "pyyaml",
  "pyroute2",
  "nsenter",
  "netaddr",
  "mako",
  "six",
  "packaging",
  "psutil",
  "matplotlib",
  "numpy",
  "toml",
  "textfsm"
]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = []
