[project]
name = "cryptolyzer-project"
dynamic = ["version"]
description = "Fast and flexible cryptographic protocol analyzer"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Szabolcs Pfeiffer", email = "pfeiffer@cryptolyzer.com" }
]
maintainers = [
  { name = "Szabolcs Pfeiffer", email = "pfeiffer@cryptolyzer.com" }
]

dependencies = [
  "cryptolyzer"
]

keywords = ["cryptography", "TLS", "SSL", "SSH", "DNSSEC", "security"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://cryptolyzer.readthedocs.io/"
Repository = "https://github.com/pfeiffersz/CryptoLyzer"
Issues = "https://github.com/pfeiffersz/CryptoLyzer/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
