[project]
name = "diagrams-project"
description = "Diagram as Code for prototyping cloud system architectures."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "diagrams"
]
dynamic = ["version"]
authors = [
  { name = "MinJae Kwon", email = "mingrammer@gmail.com" }
]
license = { text = "MIT" }
keywords = ["diagram", "cloud", "architecture", "infrastructure", "as-code"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Networking"
]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = []
