[project]
name = "dnsdiag-project"
version = "2.6.0"
description = "DNS Measurement, Troubleshooting and Security Auditing Toolset (ping, traceroute)"
authors = [
  { name = "Babak Farrokhi" }
]
license = { text = "BSD License" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "dnsdiag"
]
keywords = ["dns", "traceroute", "ping", "performance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: System :: Networking"
]

[tool.uv]
index-url = "https://pypi.org/simple"
