[project]
name = "dnsdiag-project"
dynamic = ["version"]
description = "DNS Measurement, Troubleshooting and Security Auditing Toolset (ping, traceroute)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "BSD License" }

authors = [
  { name = "Babak Farrokhi" }
]
maintainers = [
  { name = "Babak Farrokhi" }
]

dependencies = [
  "dnsdiag"
]

keywords = ["dns", "traceroute", "ping", "performance"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: System :: Networking"
]

[project.urls]
Homepage = "https://github.com/farrokhi/dnsdiag"
Repository = "https://github.com/farrokhi/dnsdiag"
Issues = "https://github.com/farrokhi/dnsdiag/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[dependency-groups]
dev = [
  # Add development dependencies here, e.g.,
  # "pytest",
  # "black"
]
