[project]
name = "dnstwist-project"
description = "Domain name permutation engine for detecting typo squatting, phishing, and brand impersonation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dnstwist",
  "geoip2",
  "dnspython",
  "ppdeep",
  "py-tlsh",
  "tld",
  "idna"
]
dynamic = ["version"]
authors = [
  { name = "Marcin Ulikowski", email = "elceef@gmail.com" }
]
license = { text = "BSD-3-Clause" }
keywords = ["security", "dns", "typosquatting", "phishing", "brand-protection"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security"
]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = []
