[project]
name = "llm-project"
description = "Command-line tool for working with large language models"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Simon Willison" }]
requires-python = ">=3.13"
dependencies = [
  "llm"
]
dynamic = ["version"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } }
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[project.optional-dependencies]
dev = []
